# moonlight-vplus

./: .gitignore  README.md  README_EN.md  build.gradle  settings.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report_en.yml  bug_report_zh.yml
.github/workflows/: android-ci.yml  upstream-sync.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/easytier/jni/: EasyTierJNI.kt  EasyTierManager.kt
app/src/main/java/com/limelight/: AppSelectionActivity.kt  AppView.kt  ConnectionCallbackHandler.kt  Game.kt  GameMenu.kt  PcView.kt  PerformanceOverlayManager.kt  ShortcutTrampoline.kt
app/src/main/java/com/limelight/binding/audio/: SmartAudioRenderer.kt
app/src/main/java/com/limelight/binding/input/advance_setting/element/: AnalogStick.java  DigitalMovableButton.java  DigitalStick.java  DigitalSwitchButton.java  Element.java  ElementController.java  HideButtonMode.java  HideKeysButton.java  InvisibleAnalogStick.java  InvisibleDigitalStick.java  MouseFreeMode.java  StickSpecialButton.java  StickSwipTrigger.java
app/src/main/java/com/limelight/binding/input/advance_setting/sqlite/: SuperConfigDatabaseHelper.java
app/src/main/java/com/limelight/binding/video/: MediaCodecDecoderRenderer.kt  PerfOverlayListener.kt  PerformanceInfo.kt
app/src/main/java/com/limelight/computers/: ComputerDatabaseManager.kt  ComputerManagerService.kt  TrustedPairState.kt
app/src/main/java/com/limelight/crash/: CrashReportPrompt.kt
app/src/main/java/com/limelight/framegen/: FramegenAdaptiveController.kt  FramegenPerformanceEnricher.kt  FramegenRuntimePlanner.kt
app/src/main/java/com/limelight/nvstream/: ConnectionContext.kt  NvConnection.kt
app/src/main/java/com/limelight/nvstream/http/: ComputerDetails.kt  NvApp.kt  NvHTTP.kt  PairStateTrust.kt
app/src/main/java/com/limelight/preferences/: AboutDialogPreference.kt  DeveloperUnlockSettings.kt  FramegenSettings.kt  GitHubStarVerifier.kt  PreferenceConfiguration.kt  StreamSettings.kt
app/src/main/java/com/limelight/utils/: AppSettingsManager.kt  EasyTierController.kt  FullscreenProgressOverlay.kt  ServerHelper.kt  UpdateManager.kt
app/src/main/res/drawable/: ic_close_stylish.xml  ic_search_stylish.xml  settings_search_bar_background.xml
app/src/main/res/layout/: activity_stream_settings.xml  dialog_about.xml  fullscreen_progress_overlay.xml  item_category_menu.xml  page_analog_stick_clean.xml  page_device.xml  page_digital_movable_button_clean.xml  page_digital_stick_clean.xml  page_edit.xml  page_hide_keys_button.xml  page_invisible_analog_stick_clean.xml  page_invisible_digital_stick_clean.xml  page_mouse_free_mode_clean.xml
app/src/main/res/layout-land/: activity_stream_settings.xml  dialog_about.xml  item_category_menu.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
app/src/main/res/values-zh-rTW/: arrays.xml  strings.xml
app/src/main/res/xml/: preferences.xml
app/src/nonRoot/: AndroidManifest.xml
app/src/test/java/com/limelight/computers/: PairStateTrustTest.kt  TestCertificates.kt  TrustedPairStateTest.kt
fastlane/metadata/android/en-US/: full_description.txt  title.txt
framegen/: README.md  build.gradle  consumer-rules.pro
framegen/src/main/: AndroidManifest.xml
framegen/src/main/cpp/: CMakeLists.txt  framegen_pipeline.cpp  framegen_pipeline.hpp  jni_bridge.cpp
framegen/src/main/cpp/cmake/: EmbedSpv.cmake
framegen/src/main/cpp/shaders/: rgba_upscale.comp  rgba_upscale16f.comp  yuv_to_rgba.comp  yuv_to_rgba16f.comp
framegen/src/main/java/com/limelight/framegen/: FramegenCapture.kt  FramegenInterceptor.kt
gradle/: libs.versions.toml
tools/mock-sunshine/: README.md  Seed-MockComputer.ps1  Start-MockSunshine.ps1  server.js
